Update paths resolution
