# src/controllers/bikes.controller.ts
@@ -1,106 +1,105 @@
 import { Request, Response, NextFunction } from "express";
-// const asyncHandler = require("express-async-handler");
 
-import BikesService from "../services/bikes.service";
-import { GetBikesQuery } from "../types/GetBikesQuery";
-// import { Bike } from "@/types/Bike";
-import { BikeDTO } from "../dtos/BikeDTO";
+import BikesService from "@/services/bikes.service";
+import { GetBikesQuery } from "@/types/GetBikesQuery";
+import { BikeDTO } from "@/dtos/BikeDTO";
+import createHttpError from "http-errors";
 
 const bikesService = BikesService.getInstance();
 
-var BikesController: any = {};
+class BikesController {
+  static getBikeById = async (
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ) => {
+    const bikeId = parseInt(req.params.bikeId);
+    const result = bikesService.getBikeById(bikeId);
 
-BikesController.getBikeById = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const bikeId = parseInt(req.params.bikeId);
-  const result = bikesService.getBikeById(bikeId);
+    if (result.success) {
+      res.status(200);
+      res.send(result);
+    } else {
+      next();
+    }
+  };
 
-  if (result.success) {
-    res.status(200);
-    res.send(result);
-  } else {
-    next();
-  }
-};
+  static getBikesWithQuery = async (
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ) => {
+    const query: GetBikesQuery = req.query;
 
-BikesController.getBikesWithQuery = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const query: GetBikesQuery = req.query;
+    if (query.pageSize! <= 0) {
+      return next(createHttpError(400, "Bad request: invalid page size"));
+    }
 
-  const result = bikesService.getBikesWithQuery(query);
+    const result = bikesService.getBikesWithQuery(query);
 
-  if (result.success) {
-    res.status(200);
-    res.send(result);
-  } else {
-    next();
-  }
-};
+    if (result.success) {
+      res.status(200);
+      res.send(result);
+    } else {
+      next();
+    }
+  };
 
-BikesController.addBike = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const bikeDto: BikeDTO = req.body;
+  static addBike = async (req: Request, res: Response, next: NextFunction) => {
+    const bikeDto: BikeDTO = req.body;
 
-  console.log("Sending post request");
-  console.log(bikeDto);
+    console.log("Sending post request");
+    console.log(bikeDto);
 
-  const result = bikesService.addBike(bikeDto);
+    const result = bikesService.addBike(bikeDto);
 
-  res.status(201);
-  res.send({
-    ...result,
-    message: `Successfully create bike no ${result.data.id}: ${result.data.brand} ${result.data.model}`,
-  });
-};
-
-BikesController.updateBike = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const bikeId = parseInt(req.params.bikeId);
-  const bikeDto: BikeDTO = req.body;
-
-  const result = bikesService.updateBike(bikeId, bikeDto);
-
-  if (result.success) {
-    res.status(200);
+    res.status(201);
     res.send({
       ...result,
-      message: `Successfully update bike no ${bikeId}`,
+      message: `Successfully create bike no ${result.data.id}: ${result.data.brand} ${result.data.model}`,
     });
-  } else {
-    next();
-  }
-};
+  };
 
-BikesController.deleteBike = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-) => {
-  const bikeId = parseInt(req.params.bikeId);
+  static updateBike = async (
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ) => {
+    const bikeId = parseInt(req.params.bikeId);
+    const bikeDto: BikeDTO = req.body;
 
-  const result = bikesService.deleteBike(bikeId);
+    const result = bikesService.updateBike(bikeId, bikeDto);
 
-  if (result.success) {
-    res.status(204);
-    res.send({
-      ...result,
-      message: `Successfully delete bike no ${bikeId}`,
-    });
-  } else {
-    next();
-  }
-};
+    if (result.success) {
+      res.status(200);
+      res.send({
+        ...result,
+        message: `Successfully update bike no ${bikeId}`,
+      });
+    } else {
+      next();
+    }
+  };
+
+  static deleteBike = async (
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ) => {
+    const bikeId = parseInt(req.params.bikeId);
+
+    const result = bikesService.deleteBike(bikeId);
+
+    if (result.success) {
+      res.status(204);
+      res.send({
+        ...result,
+        message: `Successfully delete bike no ${bikeId}`,
+      });
+    } else {
+      next();
+    }
+  };
+}
 
 export default BikesController;
